--- a/package.json
+++ b/package.json
@@ -14,29 +14,30 @@
   "author": "Muhammad Abdullah",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "braintree": "^3.30.0",
+    "bcrypt": "^6.0.0",
+    "braintree": "^3.31.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "express-formidable": "^1.2.0",
     "formidable": "^3.5.4",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.3.0",
-    "glob": "^9.3.5",
+    "glob": "^11.0.2",
     "jsonwebtoken": "^9.0.2",
-    "ldrs": "^1.0.2",
+    "ldrs": "^1.1.7",
     "mongo": "^0.1.0",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.3.4",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.4",
-    "react-icons": "^5.3.0",
-    "rimraf": "^4.4.1",
+    "nodemon": "^3.1.10",
+    "package": "^1.0.1",
+    "react-icons": "^5.5.0",
+    "rimraf": "^6.0.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "concurrently": "^9.1.0"
+    "concurrently": "^9.1.2"
   }
 }
